sfdc-integration-accelerator/src/objects/MuleIntegration__mdt/MuleIntegration__mdt.object-meta.xml
<CustomObject>
    <description>All known integrations and it&apos;s configurations with MuleSoft will be registered in this custom metadata.</description>
    <label>Mule Integration</label>
    <pluralLabel>Mule Integrations</pluralLabel>
</CustomObject>