sfdc-integration-accelerator/src/objects/MuleIntegration__mdt/fields/ApexClassName__c.field-meta.xml
<CustomField>
    <fullName>ApexClassName__c</fullName>
    <description>Apex class name that will be ran to process the Platform Event integration (publishing).</description>
    <label>Apex Class Name</label>
    <length>40</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>