sfdc-integration-accelerator/src/objects/MuleIntegration__mdt/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Integration description, what is it?</description>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>