sfdc-integration-accelerator/src/objects/MuleIntegration__mdt/fields/IsActive__c.field-meta.xml
<CustomField>
    <fullName>IsActive__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Define if integration should be triggered</description>
    <label>IsActive</label>
    <type>Checkbox</type>
</CustomField>