sfdc-integration-accelerator/src/objects/MuleIntegration__mdt/fields/IsRetryable__c.field-meta.xml
<CustomField>
    <fullName>IsRetryable__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Define if the integration will be retryed automatically when occurs Technical Errors returned in the mule events queues.</description>
    <label>IsRetryable</label>
    <type>Checkbox</type>
</CustomField>